add Swagger and OpenAPI spec validation
