# api/v1/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: "3.0.3"
 info:
-  version: 0.0.1
+  version: 1.0.0
   title: Financier API
   description: OpenAPI specification of the Financier service
   contact:
@@ -10,10 +10,12 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-  - url: http://localhost:8080/api/v1
+  - url: /api/v1
 paths:
   /accounts:
     get:
+      tags:
+        - Accounts
       description: Returns all accounts.
       operationId: getAllAccounts
       parameters: [ ]
@@ -33,6 +35,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     post:
+      tags:
+        - Accounts
       description: Creates new account.
       operationId: addAccount
       requestBody:
@@ -43,8 +47,8 @@ paths:
             schema:
               $ref: '#/components/schemas/NewAccount'
       responses:
-        '200':
-          description: account response
+        '201':
+          description: account creation response
           content:
             application/json:
               schema:
@@ -57,6 +61,8 @@ paths:
                 $ref: '#/components/schemas/Error'
   /accounts/{id}:
     get:
+      tags:
+        - Accounts
       description: Returns an account by its ID.
       operationId: findAccountByID
       parameters:
@@ -64,10 +70,8 @@ paths:
           in: path
           description: ID of account to fetch
           required: true
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Id'
+          schema:
+            $ref: '#/components/schemas/ID'
       responses:
         '200':
           description: account response
@@ -75,6 +79,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Account'
+        '404':
+          description: no account
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         default:
           description: unexpected error
           content:
@@ -83,46 +93,60 @@ paths:
                 $ref: '#/components/schemas/Error'
 components:
   schemas:
-    Account:
-      allOf:
-        - $ref: '#/components/schemas/Id'
-        - $ref: '#/components/schemas/NewAccount'
-    Id:
-      type: object
-      properties:
-        id:
-          type: string
-          minLength: 1
-          maxLength: 36
-          example: 123
-      required:
-        - id
-      additionalProperties: false
+    ID:
+      description: The ID
+      type: string
+      nullable: false
+      minLength: 1
+      maxLength: 36
+      example: 123
+      x-oapi-codegen-extra-tags:
+        binding: "required,max=36"
     NewAccount:
       type: object
       properties:
         name:
+          description: Account name
           type: string
+          nullable: false
           minLength: 1
           maxLength: 255
           example: wallet
+          x-oapi-codegen-extra-tags:
+            binding: "required,max=255"
       required:
         - name
       additionalProperties: false
+    Account:
+      allOf:
+        - type: object
+          properties:
+            id:
+              $ref: '#/components/schemas/ID'
+          required:
+            - id
+        - $ref: '#/components/schemas/NewAccount'
     Error:
       type: object
       properties:
         code:
+          description: Error code
           type: integer
           format: int8
           minimum: 0
           maximum: 127
           example: 1
+          x-oapi-codegen-extra-tags:
+            binding: "required,gte=0,lte=127"
         message:
+          description: Error message
           type: string
+          nullable: false
           minLength: 1
           maxLength: 4000
           example: Unexpected error
+          x-oapi-codegen-extra-tags:
+            binding: "required,max=4000"
       required:
         - code
         - message
