# pkg/adapters/input/rest/server/server.go
@@ -2,45 +2,48 @@ package server
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/pkg/errors"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/olegshishkin/go-logger"
 
-	"github.com/olegshishkin/financier/api/v1"
+	v1 "github.com/olegshishkin/financier/api/v1"
+	"github.com/olegshishkin/financier/pkg/adapters/input/rest"
+	"github.com/olegshishkin/financier/pkg/adapters/input/rest/handlers"
 )
+
+const apiRootPath = "/api/v1"
 
 type Server struct {
 	router *gin.Engine
+	log    logger.Logger
 }
 
-func NewServer(middleware ...gin.HandlerFunc) *Server {
-	router := gin.New()
-	router.Use(middleware...)
-
+func NewServer(log logger.Logger) *Server {
 	return &Server{
-		router: router,
+		router: gin.New(),
+		log:    log,
 	}
 }
 
-func (s *Server) RegisterRoutes(api api.ServerInterface) {
-	s.configureSwagger()
-	accounts := s.router.Group("/accounts")
-	{
-		accounts.POST("", api.AddAccount)
-		accounts.GET("", api.GetAllAccounts)
+func (s *Server) RegisterHandlers(handlers *handlers.HandlerDelegate, mdl *Middlewares) {
+	s.router.Use(mdl.Recovery, mdl.Logging, mdl.OpenAPIValidation)
+
+	opts := v1.GinServerOptions{
+		BaseURL:     apiRootPath,
+		Middlewares: nil,
+		ErrorHandler: func(c *gin.Context, err error, statusCode int) {
+			rest.Err(c, statusCode, rest.Tech, err)
+		},
 	}
+	v1.RegisterHandlersWithOptions(s.router, handlers, opts)
+}
+
+func (s *Server) RegisterSwaggerHandler(handlers *handlers.HandlerDelegate, mdl *Middlewares) {
+	group := s.router.Group("/swagger").Use(mdl.Recovery, mdl.Logging)
+	group.GET("/*any", handlers.GetSwagger)
+	s.log.Info("Swagger handler has been registered")
 }
 
 func (s *Server) Start() {
 	if err := s.router.Run(); err != nil {
-		panic(errors.Wrap(err, "Web Server error"))
+		s.log.Fatal(err, "Web Server error")
 	}
-}
-
-func (s *Server) configureSwagger() {
-	// ginSwagger.WrapHandler(
-	// 	swaggerFiles.Handler,
-	// 	ginSwagger.URL("http://localhost:8080/swagger/doc.json"),
-	// 	ginSwagger.DefaultModelsExpandDepth(-1))
-	s.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, ginSwagger.URL("swagger.yaml")))
 }
